--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -2,66 +2,137 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 240 5.9% 10%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 240 5.9% 10%;
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 240 10% 3.9%;
+    --foreground: 0 0% 98%;
+    --card: 240 10% 3.9%;
+    --card-foreground: 0 0% 98%;
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 240 5.9% 10%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 240 3.7% 15.9%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 240 4.9% 83.9%;
+  }
+}
+
 * {
-    scrollbar-width: thin;
-    scrollbar-color: #bfbfbf #FEFEFE;
+  scrollbar-width: auto;
+  scrollbar-color: #bfbfbf #FEFEFE;
 }
 
 *::-webkit-scrollbar {
-    width: 15px;
-  }
-  
-  *::-webkit-scrollbar-track {
-    background: #1a1b1e;
-  }
-  
-  *::-webkit-scrollbar-thumb {
-    border: 3px solid #bfbfbf;
-    background-color: #FEFEFE;
-    border-radius: 14px;
-  }
-  
-  .cl-internal-rsjg4y {
-    color: black !important;
-  }
+  width: 20px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #1a1b1e;
+}
+
+*::-webkit-scrollbar-thumb {
+  border: 3px solid #bfbfbf;
+  background-color: #FEFEFE;
+  border-radius: 14px;
+}
+
+.cl-internal-rsjg4y {
+  color: black !important;
+}
 
 @media (prefers-color-scheme: dark) {
-  * {
-    scrollbar-color: #282b33 #1a1b1e;    
-  }
+* {
+  scrollbar-color: #282b33 #1a1b1e;    
+}
 
-  *::-webkit-scrollbar {
-    width: 15px;
-  }
-  
-  *::-webkit-scrollbar-track {
-    background: #1a1b1e;
-  }
-  
-  *::-webkit-scrollbar-thumb {
-      border: 3px solid #1a1b1e;
-      background-color: #282b33;
-  }
+*::-webkit-scrollbar {
+  width: 20px;
+}
 
-  .cl-internal-rsjg4y {
-    color: white !important;
-  }
-  
-  .cl-internal-1hkq5ps {
-    color: white !important;
-  }
+*::-webkit-scrollbar-track {
+  background: #1a1b1e;
+}
 
-  .cl-internal-fqx4fd {
-    color: white !important
-  }
+*::-webkit-scrollbar-thumb {
+    border: 3px solid #1a1b1e;
+    background-color: #282b33;
+}
 
-  .cl-internal-f7yy9s {
-    border-color: white !important;
-    color: white !important;
+.cl-internal-rsjg4y {
+  color: white !important;
+}
 
-  }
+.cl-internal-1hkq5ps {
+  color: white !important;
+}
 
-  .cl-internal-1b63r8w {
-    color: white !important;
-  }
+.cl-internal-fqx4fd {
+  color: white !important
+}
+
+.cl-internal-3vf5mz {
+  color: white !important
+}
+
+.cl-internal-of57g {
+  color: white !important
+}
+
+.cl-internal-l1ab9q {
+  color: white !important
+}
+
+.cl-internal-rscu79 {
+  color: white !important
+}
+
+.cl-internal-mv2spy {
+  color: white !important
+}
+
+.cl-internal-n3kcow {
+  color: white !important
+}
+
+.cl-internal-f7yy9s {
+  border-color: white !important;
+  color: white !important;
+}
+
+.cl-internal-1b63r8w {
+  color: white !important;
+}
 }
